# src/app/openapi/openapi.yaml
@@ -302,47 +302,47 @@ components:
           type: string
           description: Mapped to $NAME
           examples:
-            - "Acme Corp"
+            - 'Acme Corp'
         customerNumber:
           type: string
           description: Mapped to KUNDENNUMMER
           examples:
-            - "KD-1234"
+            - 'KD-1234'
         addition:
           type: string
           description: Mapped to LIEFERANTEN_ZUSATZ
           examples:
-            - "Building B"
+            - 'Building B'
         street:
           type: string
           description: Mapped to LIEFERANTEN_STRASSE
           examples:
-            - "Industrial Ave 5"
+            - 'Industrial Ave 5'
         poBox:
           type: string
           description: Mapped to LIEFERANTEN_POSTFACH
         country:
           type: string
           description: Mapped to LIEFERANTEN_LAND (Vocabulary LIEFERANTEN_LAND)
-          enum: [ CH, D, F, FL, NL ]
+          enum: [CH, D, F, FL, NL]
           examples:
-            - "CH"
+            - 'CH'
         zipCode:
           type: string
           description: Mapped to LIEFERANTEN_POSTLEITZAHL
           examples:
-            - "8005"
+            - '8005'
         city:
           type: string
           description: Mapped to LIEFERANTEN_ORT
           examples:
-            - "Zurich"
+            - 'Zurich'
         website:
           type: string
           description: Mapped to LIEFERANTEN_WEBLINK
           pattern: '^(http|https|ftp)://\S+$'
           examples:
-            - "https://acme.com"
+            - 'https://acme.com'
         email:
           type: string
           description: Mapped to LIEFERANTEN_EMAIL
@@ -415,13 +415,13 @@ components:
           type: string
           description: Mapped to NAME (Short description)
           examples:
-            - "Lab material Q1"
+            - 'Lab material Q1'
         mainCategory:
           type: string
           description: Mapped to BESTELLUNG_HK (Vocabulary BESTELLUNGHK)
-          enum: [ Beschaffung, Dienstleistung ]
+          enum: [Beschaffung, Dienstleistung]
           examples:
-            - "Beschaffung"
+            - 'Beschaffung'
         subCategory:
           type: string
           description: Mapped to BESTELLUNG_UK (Vocabulary BESTELLUNGFK)
@@ -436,22 +436,22 @@ components:
             - PC Software
             - Prüfmaschine
           examples:
-            - "Messmittel"
+            - 'Messmittel'
         details:
           type: string
           description: Mapped to BEZEICHNUNG
           examples:
-            - "50x Precision scales"
+            - '50x Precision scales'
         frequency:
           type: string
           description: Mapped to RYTHMUS [sic!]
           examples:
-            - "One-time"
+            - 'One-time'
         contactPerson:
           type: string
           description: Mapped to ANSPRECHPERSON
           examples:
-            - "John Doe"
+            - 'John Doe'
         contactEmail:
           type: string
           description: Mapped to ANSPRECHPERSON_EMAIL
@@ -465,7 +465,7 @@ components:
           type: string
           description: Mapped to BESTELLART
           examples:
-            - "Email"
+            - 'Email'
         orderedBy:
           type: string
           description: Mapped to BESTELLER (Name of initiator)
@@ -474,7 +474,7 @@ components:
           format: date
           description: Mapped to BESTELLDATUM (YYYY-MM-DD)
           examples:
-            - "2023-12-15"
+            - '2023-12-15'
         deliveryDate:
           type: string
           format: date
@@ -495,7 +495,7 @@ components:
               type: string
               description: Reference to supplier (PermID) - mandatory for assignment
               examples:
-                - "2023050512345"
+                - '2023050512345'
 
     OrderUpdateDTO:
       title: OrderUpdateDTO
@@ -518,7 +518,7 @@ components:
               description: OpenBIS Code
             ratingStatus:
               type: string
-              enum: [ RATED, PENDING ]
+              enum: [RATED, PENDING]
               description: Helps the frontend to show if already rated.
             supplierId:
               type: string
@@ -527,7 +527,7 @@ components:
               type: string
               description: Name of the parent supplier (for display)
             ratingId:
-              type: [ "string", "null" ]
+              type: ['string', 'null']
               description: PermID of the linked rating (if exists), otherwise null.
 
     # --- RATING DTOS ---
